# rust-py-ffi-demo

./: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml
.cargo/: config.toml
src/: from_py.rs  lib.rs  main.rs  rust_to_py.rs
src/python/: call_rust.py  math_utils.py
