[package]
name = "rust-py-ffi"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_py_ffi"
crate-type = ["rlib", "cdylib"]

[dependencies]
log = "0.4.28"
pyo3 = { version = "0.26.0", features = [
    "extension-module",
    "auto-initialize",
] }

[[bin]]
name = "py_to_rust"
path = "src/main.rs"
